logout implemented, bad credentials bug found